resources/modules/global/css/global.css
/* ... */
.step-2-checkbox-option {
    display: flex;
    width: 100%;
    margin-top: 1rem;
    margin-bottom: 1rem;
    padding: 1rem;
    border: 1px solid #EBEBEB;
    border-radius: 8px;
    font-weight: 600;
    font-size: 14px;
    color: #0B1D3D;
}
.step-2-checkbox-option input[type="checkbox"] {
    margin: 3px 0 0 0 !important;
}
.step-2-checkbox-option span {
    margin-left: 12px;
}
.step-2-checkbox-option input[type="text"] {
    padding: 0px;
    border: none;
    border-radius: 0px;
    outline: none;
    font-weight: 400;
    font-size: 14px;
}

@media screen and (max-width: 767px) {
    #new-register-next-step,
    #new-register-previous-step
    {
        width: 45%;
    }
}

#open-steps-btn {
    background: transparent!important;
}
#open-steps-btn:not(:disabled):not(.disabled).active:focus,
#open-steps-btn:not(:disabled):not(.disabled):active:focus {
    box-shadow: none;
}

#new-register-step-3-container input[type="text"]:hover,
#new-register-step-3-container input[type="text"]:focus {
    outline: none!important;
    border: 1px solid #e4eaec;
}

.input-valid {
    border: 1px solid #59BF75;
}
.input-valid:hover,
.input-valid:focus {
    border: 1px solid #59BF75!important;
}

.input-invalid {
    border: 1px solid #E81414;
}
.input-invalid:hover,
.input-invalid:focus {
    border: 1px solid #E81414!important;
}

#new-register-range {
    padding: 0;
    height: 4px;
    background: #EBEBEB;
    border-radius: 5px;
    background-image: linear-gradient(#2E85EC, #2E85EC);
    background-size: 0% 100%;
    background-repeat: no-repeat;
    -webkit-appearance: none;
}
#new-register-range:focus,
#new-register-range:hover {
    outline: none;
}

#new-register-range::-webkit-slider-runnable-track  {
    box-shadow: none;
    border: none;
    background: transparent;
    cursor: pointer;
    -webkit-appearance: none;
}

#new-register-range::-webkit-slider-thumb {
    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 0px 8px rgba(0, 0, 0, 0.08);
    height: 28px;
    width: 28px;
    border-radius: 50%;
    background: #ffffff;
    cursor: pointer;
    transition: background .3s ease-in-out;
    -webkit-appearance: none;
}

#new-register-range::-moz-range-track {
    box-shadow: none;
    border: none;
    background: transparent;
    cursor: pointer;
    -webkit-appearance: none;
}

#new-register-range::-moz-range-thumb {
    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 0px 8px rgba(0, 0, 0, 0.08);
    height: 28px;
    width: 28px;
    border-radius: 50%;
    background: #ffffff;
    cursor: pointer;
    transition: background .3s ease-in-out;
    -webkit-appearance: none;
}

#new-register-range::-ms-track {
    box-shadow: none;
    border: none;
    background: transparent;
    cursor: pointer;
    -webkit-appearance: none;
}

#new-register-range::-ms-thumb {
    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.12), 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 0px 8px rgba(0, 0, 0, 0.08);
    height: 28px;
    width: 28px;
    border-radius: 50%;
    background: #ffffff;
    cursor: pointer;
    transition: background .3s ease-in-out;
    -webkit-appearance: none;
}

.new-register-overlay-footer {
    margin-top: 44px;
    text-align: center;
}
.new-register-overlay-footer .btn {
    font-weight: 600;
    font-size: 16px;
    color: #2E85EC;
    text-align: center;
    padding: 0;
    background: transparent;
    border: none;
    line-height: 1;
}

@media screen and (max-width: 767px) {
    .new-register-overlay-title-container {
        padding: 0;
    }
    .new-register-btn {
        height: auto;
    }
}

@media screen and (max-width: 475px) {
    .new-register-overlay-body .card {
        padding: 16px;
    }
    .new-register-overlay-body .card .icon {
        margin-right: 14px;
    }
    .new-register-overlay-body .card .new-register-btn {
        padding-right: 0;
    }
}

.account-health-note-circle {
    width: 12px;
    height: 12px;
    border-radius: 100%;
    content: "";
}

.bg-color-blue {
    background: #108DEC;
    -webkit-animation: ripple-blue .7s linear infinite;
    animation: ripple-blue .7s linear infinite;
}

@-webkit-keyframes ripple-blue {
    0% {
        box-shadow: 0 0 0 0 rgba(16, 141, 236, 0.3), 0 0 0 5px rgba(16, 141, 236, 0.3);
    }
    to {
        box-shadow: 0 0 0 5px rgba(16, 141, 236, 0.3), 0 0 0 15px rgba(16, 141, 236, 0);
    }
}

@keyframes ripple-blue {
    0% {
        box-shadow: 0 0 0 0 rgba(16, 141, 236, 0.3), 0 0 0 5px rgba(16, 141, 236, 0.3);
    }
    to {
        box-shadow: 0 0 0 5px rgba(16, 141, 236, 0.3), 0 0 0 15px rgba(16, 141, 236, 0);
    }
}

#company-select, #company-select-mobile{
    font-family: 'Inter' !important;
}
.company-navbar + .sirius-select-text{
    border: 1px white solid;
    background-position-x: 92.5%;
    padding-right: 50px;
    background-color: #f4f4f4;
    color:#15034C;
    font-weight: 600;
    font-size: 16px;
}
.company-navbar + .active {
    border: 1px solid #88BFFF;
}
/* .company-navbar + .sirius-select-text{
    color:#15034C;
    font-weight: 600;
    font-size: 16px;
} */

.cloudfox-logo-desktop{
    display: flex;
}
.cloudfox-logo-mobile{
    display: none;
    background-color: #fff;
}

@media (max-width: 768px) {
    #company-select{
        display:none !important
    }
    #company-select-mobile{
        display: block !important;
    }
    .cloudfox-logo-desktop{
        display: none;
    }
    .cloudfox-logo-mobile{
        display: flex;
    }
    .announcekit-widget{
        display: flex !important;
    }
    .announcekit-widget-badge{
        position: absolute;
        top: -3px;
        right: 3px;
    }
    #top-vertical-bar{
        display: none;
    }
    .hamburger-desk{
        display: none;
    }
}

@-webkit-keyframes fade-in {
    0% { opacity: 0; }

    100% { opacity: 1; }
}

@keyframes fade-in {
    0% { opacity: 0; }

    100% { opacity: 1; }
}
/* ... */

